--- a/public/indexCalculator_admin.html
+++ b/public/indexCalculator_admin.html
@@ -634,6 +634,7 @@
             <button type="button" class="clearButton">Clear</button>
             <button type="button" class="updateCost">Update Cost</button>
             <button type="button" class="saveDraft">Save Draft</button>
+            <button type="button" onclick="checkAllBoxes()" class="checkAllBoxes">check all box</button>
         </div>
 
         <div class="container3 clearfix">
