added the range for Sales rather than average of upper and lower

--- a/public/indexCalculator.html
+++ b/public/indexCalculator.html
@@ -38,21 +38,21 @@
                 </div>
             </div> -->
 
-            <div class="price_projected clearfix">
-                <div class="price_projected--text">Projected Price</div>
+            <div class="price_projected_1 clearfix">
+                <div class="price_projected_1--text">Projected Lower</div>
                 <div class="right clearfix">
-                    <div class="price_projected--value">0</div>
+                    <div class="price_projected_1--value">0</div>
                     <!-- <div class="price_projected_1--percentage">35%</div> -->
                 </div>
             </div>
 
-            <!-- <div class="price_projected_2 clearfix">
+            <div class="price_projected_2 clearfix">
                 <div class="price_projected_2--text">Projected Upper</div>
                 <div class="right clearfix">
                     <div class="price_projected_2--value">0</div>
-                     <div class="price_projected_2--percentage">31%</div>
+                     <!-- <div class="price_projected_2--percentage">31%</div> -->
                 </div>
-            </div> -->
+            </div>
         </div>
 
     </div>
@@ -536,7 +536,7 @@
                 <button type="button" class="clearButton">Clear</button>
                 <button type="button" class="updateCost">Update Cost</button>
                 <button type="button" class="saveDraft">Save Draft</button>
-
+                <button type="button" onclick="checkAllBoxes()" class="checkAllBoxes">check all box</button>
 
             </div>
         </div>
