Finished A&P Dissection Customization

--- a/public/indexCalculator_admin.html
+++ b/public/indexCalculator_admin.html
@@ -345,6 +345,13 @@
                         <input name="kitVersion" type="checkbox" value="ap-v1" onclick="kitVersion(this)"> Version 1
                         <input name="kitVersion" type="checkbox" value="ap-v2" onclick="kitVersion(this)"> Version 2
                         <input name="kitVersion" type="checkbox" value="ap-v3" onclick="kitVersion(this)"> Version 3
+
+                        <input name="ap-d1" type="checkbox" > REMOVE DISSECTION
+                        <input name="ap-d2" type="checkbox" > REMOVE PIG
+                        <input name="ap-d3" type="checkbox" > ADD KIDNEY
+                        <input name="ap-d4" type="checkbox" > ADD RAT
+                        <input name="ap-d5" type="checkbox" > ADD RABBIT
+
                         </button></h2>
 
                     <div class="content">
