--- a/public/indexCalculator_admin.html
+++ b/public/indexCalculator_admin.html
@@ -31,6 +31,7 @@
                 Price Estimate<span class="price_title--kit"></span>:
             </div>
 
+            <!-- this is for Backend price -->
             <div class="price_cost clearfix">
                 <div class="price_cost--text">Actual</div>
                 <div class="right">
