moved database to gCloud

--- a/public/indexCalculator_admin.html
+++ b/public/indexCalculator_admin.html
@@ -250,6 +250,8 @@
                         <input name="kitVersion" type="checkbox" value="gb-v1" onclick="kitVersion(this)"> Version 1
                         <input name="kitVersion" type="checkbox" value="gb-v2" onclick="kitVersion(this)"> Version 2
                         <input name="kitVersion" type="checkbox" value="gb-v3" onclick="kitVersion(this)"> Version 3
+
+                        <input name="gb-d1" type="checkbox" > REMOVE DISSECTION
                         </button></h2>
 
                     <div class="content">
@@ -284,6 +286,8 @@
                         <input name="kitVersion" type="checkbox" value="ib-v2" onclick="kitVersion(this)"> Version 2
                         <input name="kitVersion" type="checkbox" value="ib-v3" onclick="kitVersion(this)"> Version 3
                         <input name="kitVersion" type="checkbox" value="ib-v4" onclick="kitVersion(this)"> Version 4
+
+                        <input name="ib-d1" type="checkbox" > REMOVE DISSECTION
                         </button></h2>
 
                     <div class="content">
@@ -321,6 +325,8 @@
 
                     <h2 <button class="collapsible">2nd Edition Human Biology
                         <input name="kitVersion" type="checkbox" value="hb-v1" onclick="kitVersion(this)"> Version 1
+
+                        <input name="hb-d1" type="checkbox" > REMOVE DISSECTION
                         </button></h2>
 
                     <div class="content">
