Finished Development. Change variables after demo.

--- a/public/indexCalculator_admin.html
+++ b/public/indexCalculator_admin.html
@@ -67,6 +67,13 @@
                 </div>
             </div>
 
+            <div class="packingCost clearfix">
+                <div class="packingCost--text">Packing Cost</div>
+                <div class="right clearfix">
+                    <div class="packingCost--value">0.0</div>
+                </div>
+            </div>
+
             <div class="price_projected_1 clearfix">
                 <div class="price_projected_1--text">Projected Lower</div>
                 <div class="right clearfix">
