Adjusted Pricing Varibles. Added customization rule for admin UI.

--- a/public/indexCalculator_admin.html
+++ b/public/indexCalculator_admin.html
@@ -40,6 +40,13 @@
                 </div>
             </div>
 
+            <div class="lastPurchasePrice clearfix">
+                <div class="lastPurchasePrice--text">Last Purchase Price</div>
+                <div class="right clearfix">
+                    <div class="lastPurchasePrice--value">0.0</div>
+                </div>
+            </div>
+
             <div class="price_projected_1 clearfix">
                 <div class="price_projected_1--text">Projected Lower</div>
                 <div class="right clearfix">
@@ -258,7 +265,7 @@
                         <input name="kitVersion" type="checkbox" value="gb-v2" onclick="kitVersion(this)"> Version 2
                         <input name="kitVersion" type="checkbox" value="gb-v3" onclick="kitVersion(this)"> Version 3
 
-                        <input name="gb-d1" type="checkbox" > REMOVE DISSECTION
+                        <input name="gb-d1" type="checkbox"> REMOVE DISSECTION
                         </button></h2>
 
                     <div class="content">
@@ -294,7 +301,7 @@
                         <input name="kitVersion" type="checkbox" value="ib-v3" onclick="kitVersion(this)"> Version 3
                         <input name="kitVersion" type="checkbox" value="ib-v4" onclick="kitVersion(this)"> Version 4
 
-                        <input name="ib-d1" type="checkbox" > REMOVE DISSECTION
+                        <input name="ib-d1" type="checkbox"> REMOVE DISSECTION
                         </button></h2>
 
                     <div class="content">
@@ -333,7 +340,7 @@
                     <h2 <button class="collapsible">2nd Edition Human Biology
                         <input name="kitVersion" type="checkbox" value="hb-v1" onclick="kitVersion(this)"> Version 1
 
-                        <input name="hb-d1" type="checkbox" > REMOVE DISSECTION
+                        <input name="hb-d1" type="checkbox"> REMOVE DISSECTION
                         </button></h2>
 
                     <div class="content">
@@ -360,11 +367,11 @@
                         <input name="kitVersion" type="checkbox" value="ap-v2" onclick="kitVersion(this)"> Version 2
                         <input name="kitVersion" type="checkbox" value="ap-v3" onclick="kitVersion(this)"> Version 3
 
-                        <input name="ap-d1" type="checkbox" > REMOVE DISSECTION
-                        <input name="ap-d2" type="checkbox" > REMOVE PIG
-                        <input name="ap-d3" type="checkbox" > ADD KIDNEY
-                        <input name="ap-d4" type="checkbox" > ADD RAT
-                        <input name="ap-d5" type="checkbox" > ADD RABBIT
+                        <input name="ap-d1" type="checkbox"> REMOVE DISSECTION
+                        <input name="ap-d2" type="checkbox"> REMOVE PIG
+                        <input name="ap-d3" type="checkbox"> ADD KIDNEY
+                        <input name="ap-d4" type="checkbox"> ADD RAT
+                        <input name="ap-d5" type="checkbox"> ADD RABBIT
 
                         </button></h2>
 
