Removed Update Cost from Sales UI

--- a/public/indexCalculator.html
+++ b/public/indexCalculator.html
@@ -547,7 +547,7 @@
                 <p>&nbsp;</p>
                 <button type="button" class="calculateButton">Calculate</button>
                 <button type="button" class="clearButton">Clear</button>
-                <button type="button" class="updateCost">Update Cost</button>
+                <!-- <button type="button" class="updateCost">Update Cost</button> -->
                 <button type="button" class="saveDraft">Save Draft</button>
                 <button type="button" onclick="checkAllBoxes()" class="checkAllBoxes">check all box</button>
 
