--- a/public/managePD.html
+++ b/public/managePD.html
@@ -12,9 +12,8 @@
 
 <body>
 
-    <h2><div id="time"></div></h2>
     <button type="button" onclick="logout()" class="logout">Logout</button>
-    <label id="username"></label> 
+    <label id="username"></label>
     <button type="button" onclick="ckpTab()" class="ckp">CKP</button>
     <button type="button" onclick="window.location='adminPage.html';" class="admin">Admin</button>
 
@@ -29,60 +28,60 @@
 
         <div class="container clearfix">
 
-            <div class="self">
+            <div class="self_list">
 
-                <div class="self_list">
-                    <h6 class="self_title">Created Documents</h6>
-                    <div id="wrap">
-
-                        <div class="sleft_col">
-                            <h3 class="self_proposal">Proposals</h3>
-                            <!-- <h3 class="self_proposal">Proposals</h3> -->
-
-                            <!-- <a id="sp1" href="#" onclick="displayRequired(this);">link text1</a><br/>
-                            <a id="sp2" href="#" onclick="displayRequired(this);">link text2</a><br/>
-                            <a id="sp3" href="#" onclick="displayRequired(this);">link text3</a><br/>
-                            <a id="sp4" href="#" onclick="displayRequired(this);">link text4</a><br/> -->
+                <div class="row">
+                    <h2 class="self_title">Created Documents</h2>
+                    <div class="column1">
+                        <h3 class="self_proposal">Proposals</h3>
+                        <div class="selfProp_list">
+                            <!-- <a id="sp1" href="#" onclick="displayRequired(this);">link text1</a><br />
+                            <a id="sp2" href="#" onclick="displayRequired(this);">link text2</a><br />
+                            <a id="sp3" href="#" onclick="displayRequired(this);">link text3</a><br />
+                            <a id="sp4" href="#" onclick="displayRequired(this);">link text4</a><br /> -->
                         </div>
-
-                        <div class="sright_col">
-                            <h3 class="self_drafts">Drafts</h3>
-                            <!-- <a id="sd1" href="#" onclick="displayRequired(this);">link text1</a><br/>
-                            <a id="sd2" href="#" onclick="displayRequired(this);">link text2</a><br/>
-                            <a id="sd3" href="#" onclick="displayRequired(this);">link text3</a><br/>
-                            <a id="sd4" href="#" onclick="displayRequired(this);">link text4</a><br/> -->
+                    </div>
+                    <div class="column2">
+                        <h3 class="self_drafts">Drafts</h3>
+                        <div class="selfDraft_list">
+                            <!-- <a id="sd1" href="#" onclick="displayRequired(this);">link text1</a><br />
+                            <a id="sd2" href="#" onclick="displayRequired(this);">link text2</a><br />
+                            <a id="sd3" href="#" onclick="displayRequired(this);">link text3</a><br />
+                            <a id="sd4" href="#" onclick="displayRequired(this);">link text4</a><br /> -->
                         </div>
-
                     </div>
                 </div>
-
             </div>
 
-            <div class="others">
+        </div>
 
-                <div class="others_list">
-                    <h6 class="others_title">Drafts and Proposals Created by Others</h6>
-                    <div id="wrap">
 
-                        <div class="oleft_col">
-                            <h3 class="others_proposal">Proposals</h3>
-                            <!-- <a id="op1" href="#" onclick="displayRequired(this);">link text1</a><br/>
-                            <a id="op2" href="#" onclick="displayRequired(this);">link text2</a><br/>
-                            <a id="op3" href="#" onclick="displayRequired(this);">link text3</a><br/>
-                            <a id="op4" href="#" onclick="displayRequired(this);">link text4</a><br/> -->
+
+        <div class="container clearfix">
+
+            <div class="others_list">
+
+                <div class="row">
+                    <h2 class="others_title">Drafts and Proposals Created by Others</h2>
+                    <div class="column1">
+                        <h3 class="others_proposal">Proposals</h3>
+                        <div class="othersProp_list">
+                            <!-- <a id="sp1" href="#" onclick="displayRequired(this);">link text1</a><br />
+                            <a id="sp2" href="#" onclick="displayRequired(this);">link text2</a><br />
+                            <a id="sp3" href="#" onclick="displayRequired(this);">link text3</a><br />
+                            <a id="sp4" href="#" onclick="displayRequired(this);">link text4</a><br /> -->
                         </div>
-
-                        <div class="oright_col">
-                            <h3 class="others_drafts">Drafts</h3>
-                            <!-- <a id="od1" href="#" onclick="displayRequired(this);">link text1</a><br/>
-                            <a id="od2" href="#" onclick="displayRequired(this);">link text2</a><br/>
-                            <a id="od3" href="#" onclick="displayRequired(this);">link text3</a><br/>
-                            <a id="od4" href="#" onclick="displayRequired(this);">link text4</a><br/> -->
+                    </div>
+                    <div class="column2">
+                        <h3 class="others_drafts">Drafts</h3>
+                        <div class="othersDraft_list">
+                            <!-- <a id="sd1" href="#" onclick="displayRequired(this);">link text1</a><br />
+                            <a id="sd2" href="#" onclick="displayRequired(this);">link text2</a><br />
+                            <a id="sd3" href="#" onclick="displayRequired(this);">link text3</a><br />
+                            <a id="sd4" href="#" onclick="displayRequired(this);">link text4</a><br /> -->
                         </div>
-
                     </div>
                 </div>
-
             </div>
 
         </div>
