--- a/public/index.html
+++ b/public/index.html
@@ -42,7 +42,7 @@
             </label>
         </div>
 
-        <div class="container" style="background-color:#f1f1f1">
+        <div class="container">
             <button type="button" onclick="window.location='register.html';" class="register">New User</button>
             <button type="button" class="cancelbtn">Cancel</button>
             <button type="button" onclick="window.location='passwordReset.html';" class="resetbtn">Reset Password</button>
