Demo. Updates. Pending: Notify SAdmin

--- a/public/indexCalculator.html
+++ b/public/indexCalculator.html
@@ -1016,6 +1016,7 @@
 
 
                     <div class="column3">
+                        <div class="labCounts--value"></div>
                         <h2 class="cart_title">Cart:
                             <div class="price_projected_2--value"></div>
                             <div class="hypen">-</div>
@@ -1048,7 +1049,6 @@
                         </div>
 
                         <p>&nbsp;</p>
-                        <p>&nbsp;</p>
 
                         <button type="button" class="calculateButton">Calculate</button>
                         <button type="button" class="clearButton">Clear</button>
@@ -1057,7 +1057,7 @@
 
                         <div class="sop">
 
-                            <h2 <button class="collapsible">Sale of Proposal</h2>
+                            <h2 <button class="collapsible">Proposal</h2>
 
                             <div class="content">
 
@@ -1096,7 +1096,7 @@
                                 <p>&nbsp;</p>
 
                                 <h1 class="notes_title">NOTES:</h1>
-                                <textarea id=notes cols='25' rows='10'></textarea>
+                                <textarea id=notes cols='40' rows='15'></textarea>
 
                                 <p>&nbsp;</p>
                                 <p>&nbsp;</p>
