--- a/public/indexCalculator_admin.html
+++ b/public/indexCalculator_admin.html
@@ -1132,6 +1132,7 @@
 
 
                     <div class="column3">
+                        <div class="labCounts--value"></div>
                         <h2 class="cart_title">Cart:</h2>
                         <div class="cart_list">
 
@@ -1170,7 +1171,7 @@
 
                         <div class="sop">
 
-                            <h2 <button class="collapsible">Sale of Proposal</h2>
+                            <h2 <button class="collapsible">Proposal</h2>
 
                             <div class="content">
 
