--- a/public/indexCalculator.html
+++ b/public/indexCalculator.html
@@ -1053,6 +1053,8 @@
                         <button type="button" class="calculateButton">Calculate</button>
                         <button type="button" class="clearButton">Clear</button>
                         <p>&nbsp;</p>
+                        <input name="send" type="checkbox" id="isPending" value="isPending">
+                        <label for="checkbox">Send Draft for Pricing</label><br>
                         <button type="button" class="saveDraft">Save Draft</button>
 
                         <div class="sop">
