Working on New Feature: Notify. Sales <- -> Super Admin.

--- a/public/adminPage.html
+++ b/public/adminPage.html
@@ -33,6 +33,7 @@
         <br><a href="addUser.html">--- Add New User</a></br>
         <br><a href="manageUser.html">--- Manage Users</a></br>
         <br><a href="packingBOM.html">--- Generate BOM and Packing List</a></br>
+        <br><a href="pendingDrafts.html">--- Pending Drafts for Pricing</a></br>
 
 
     </div>
