--- a/public/indexCalculator_admin.html
+++ b/public/indexCalculator_admin.html
@@ -186,7 +186,7 @@
 
                             <div class="content">
 
-                                <input name="gp-10" type="checkbox" id="gp-v1" value="gp-v1" onclick="kitVersion(this)">
+                                <input name="gp" type="checkbox" id="gp-v1" value="gp-v1" onclick="kitVersion(this)">
                                 <label for="checkgbox">Version 1</label><br>
                                 <input name="gp" type="checkbox" id="gp-v2" value="gp-v2" onclick="kitVersion(this)">
                                 <label for="checkbox">Version 2</label><br>
