--- a/public/managePD.html
+++ b/public/managePD.html
@@ -18,10 +18,8 @@
     <button type="button" onclick="window.location='adminPage.html';" class="admin">Admin</button>
 
     <div class="title">
-        Previously Created Proposals<span class="title"></span>
-    </div>
-    <div class="title">
-        eScience Labs LLC<span class="title"></span>
+        <br>Previously Created Proposals<br />
+        <br>eScience Labs LLC<br /><span class="title"></span>
     </div>
 
     <div class="list">
