--- a/public/managePD.html
+++ b/public/managePD.html
@@ -49,6 +49,16 @@
                         </div>
                     </div>
                 </div>
+
+                <table id="adminPriced">
+
+                    <tr>
+                        <th>Draft Sent for Pricing</th>
+                        <th>Returned Proposals</th>
+                    </tr>
+
+                </table>
+
             </div>
 
         </div>
