added time frame filtering to proposals/drafts

--- a/public/managePD.html
+++ b/public/managePD.html
@@ -7,6 +7,12 @@
     <link href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css" rel="stylesheet" type="text/css">
     <link type="text/css" rel="stylesheet" href="css/styleManagePD.css">
     <link rel="icon" href="data:;base64,iVBORw0KGgo=">
+
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/jquery/latest/jquery.min.js"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/momentjs/latest/moment.min.js"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.css" />
+
     <title>Proposal & Draft</title>
 </head>
 
@@ -30,6 +36,44 @@
 
                 <div class="row">
                     <h2 class="self_title">Created Documents</h2>
+                    Date Range:
+                    <div id="reportrange"
+                        style="background: #003A5D; color:white; cursor: pointer; padding: 5px 10px; border: 3px solid rgb(0, 0, 0); width: 20%">
+                        <i class="fa fa-calendar"></i>
+                        <span></span> <i class="fa fa-caret-down"></i>
+                    </div>
+                    <!-- <button type="button" onclick="update()" class="ckp">Update</button> -->
+
+                    <!-- <script type="text/javascript">
+                        $(function () {
+
+                            var start = moment().subtract(6, 'days');
+                            var end = moment();
+
+                            function cb(start, end) {
+                                $('#reportrange span').html(start.format('MMMM D, YYYY') + ' - ' + end.format('MMMM D, YYYY'));
+                            }
+
+                            $('#reportrange').daterangepicker({
+                                startDate: start,
+                                endDate: end,
+                                ranges: {
+                                    'Today': [moment(), moment()],
+                                    'Yesterday': [moment().subtract(1, 'days'), moment().subtract(1, 'days')],
+                                    'Last 7 Days': [moment().subtract(6, 'days'), moment()],
+                                    'Last 30 Days': [moment().subtract(29, 'days'), moment()],
+                                    'This Month': [moment().startOf('month'), moment().endOf('month')],
+                                    'Last Month': [moment().subtract(1, 'month').startOf('month'), moment().subtract(1, 'month').endOf('month')]
+                                }
+                            }, cb);
+
+                            cb(start, end);
+
+                        });
+                    </script> -->
+
+                    <p>&nbsp;</p>
+
                     <div class="column1">
                         <h3 class="self_proposal">Proposals</h3>
                         <div class="selfProp_list">
@@ -62,8 +106,6 @@
             </div>
 
         </div>
-
-
 
         <div class="container clearfix">
 
