sales fix 1: UI edits, PDF fix.

--- a/public/managePD.html
+++ b/public/managePD.html
@@ -97,8 +97,8 @@
                 <table id="adminPriced">
 
                     <tr>
-                        <th>Draft Sent for Pricing</th>
-                        <th>Returned Proposals</th>
+                        <th>Additional Request through Molly</th>
+                        <th>Returned Proposals by Molly</th>
                     </tr>
 
                 </table>
