--- a/public/register.html
+++ b/public/register.html
@@ -33,8 +33,7 @@
         <label for="psw"><b>Enter New Password Again</b></label>
         <input type="password" placeholder="Enter New Password" name="psw" id="psw2">
 
-        <label for="pass"><b>Pass Phrase (Pass Pharse is needed when you want to Reset your password. Better to use
-                your Phone Number.)</b></label>
+        <label for="pass"><b>Pass Phrase (Sent in Email. Pass Pharse is needed when you want to Reset your password.)</b></label>
         <input type="password" placeholder="Enter Pass Phrase" name="psw" id="psw3">
 
         <button type="submit" onclick="register(this)">REGISTER</button>
