--- a/public/index.html
+++ b/public/index.html
@@ -36,7 +36,7 @@
             <label for="psw"><b>Password</b></label>
             <input type="password" placeholder="Enter Password" name="psw" id="psw">
 
-            <button type="submit" onclick="login(this)">Login</button>
+            <button type="submit" onclick="login(this)" class="login" >Login</button><br>
             <label>
                 <input type="checkbox" checked="checked" name="remember"> Remember me
             </label>
