--- a/public/indexCalculator.html
+++ b/public/indexCalculator.html
@@ -1051,10 +1051,10 @@
                         <p>&nbsp;</p>
 
                         <button type="button" class="calculateButton">Calculate</button>
-                        <button type="button" class="clearButton">Clear</button>
+                        <button type="button" onclick="clearAll()" class="clearButton">Clear</button>
                         <p>&nbsp;</p>
                         <input name="send" type="checkbox" id="isPending" value="isPending">
-                        <label for="checkbox">Send Draft for Pricing</label><br>
+                        <label for="checkbox">Additional Request through Molly</label><br>
                         <button type="button" class="saveDraft">Save Draft</button>
 
                         <div class="sop">
