--- a/public/indexCalculator_admin.html
+++ b/public/indexCalculator_admin.html
@@ -1164,7 +1164,7 @@
                         <p>&nbsp;</p>
 
                         <button type="button" class="calculateButton">Calculate</button>
-                        <button type="button" class="clearButton">Clear</button>
+                        <button type="button" onclick="clearAll()" class="clearButton">Clear</button>
                         <p>&nbsp;</p>
                         <button type="button" class="updateCost">Update Cost</button>
                         <button type="button" class="saveDraft">Save Draft</button>
