sales fix 2: --eSign,versioning(lab,v1-v2),Final.

--- a/public/adminPage.html
+++ b/public/adminPage.html
@@ -12,7 +12,9 @@
 
 <body>
 
-    <h2><div id="time"></div></h2>
+    <h2>
+        <div id="time"></div>
+    </h2>
     <button type="button" onclick="logout()" class="logout">Logout</button>
     <label id="username"></label>
     <button type="button" onclick="window.location='indexCalculator_admin.html';" class="ckp">CKP</button>
@@ -34,7 +36,7 @@
         <br><a href="manageUser.html">--- Manage Users</a></br>
         <br><a href="packingBOM.html">--- Generate BOM and Packing List</a></br>
         <br><a href="pendingDrafts.html">--- Pending Drafts for Pricing</a></br>
-
+        <br><a href="finalizedProposals.html">--- Finalized Proposal for Production</a></br>
 
     </div>
 
