--- a/public/finalizedProposals.html
+++ b/public/finalizedProposals.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:100,300,400,600" rel="stylesheet" type="text/css">
     <link href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css" rel="stylesheet" type="text/css">
-    <link type="text/css" rel="stylesheet" href="css/stylePendingDrafts.css">
+    <link type="text/css" rel="stylesheet" href="css/styleFinalizedProposals.css">
     <link rel="icon" href="data:;base64,iVBORw0KGgo=">
     <title>Proposal & Draft</title>
 </head>
@@ -18,7 +18,7 @@
     <button type="button" onclick="window.location='adminPage.html';" class="admin">Admin</button>
 
     <div class="title">
-        <br>Pending Drafts for Pricing<br />
+        <br>Finalized Proposals for Production<br />
         <br>eScience Labs LLC<br /><span class="title"></span>
     </div>
 
@@ -26,25 +26,15 @@
 
         <div class="container clearfix">
 
-            <div class="pending_list">
+            <div class="finalized_list">
 
-                <table id="pending">
+                <table id="finalized">
 
                     <tr>
-                        <th>Draft</th>
-                        <th>Previous Price</th>
-                        <th>Subject</th>
-                        <th>Notes</th>
-                        <th>Status</th>
-                        <th>Update</th>
+                        <th>Proposal</th>
+                        <th>Download BOM</th>
+                        <th>Download Packing List</th>
                     </tr>
-                    <!-- <tr>
-                        <td>Maria Anders</td>
-                        <td>Germany</td>
-                        <td>Alfreds Futterkiste</td>
-                        <td>Maria Anders Maria Anders Maria Anders Maria Anders Maria Anders</td>
-                        <td>True</td>
-                    </tr> -->
 
                 </table>
 
@@ -57,7 +47,7 @@
 
     <!-- <footer>&copy; Copyright 2018 HTML.am</footer> -->
 
-    <script src="js/pendingDrafts.js"></script>
+    <script src="js/finalizedProposals.js"></script>
 
 </body>
 
