--- a/public/indexCalculator.html
+++ b/public/indexCalculator.html
@@ -1065,8 +1065,8 @@
 
                                 <h3 class="general_title">General Details:</h3>
 
-                                <!-- <label for="date"><b>Date:</b></label>
-                                        <input type="text" placeholder="Enter date" name="date" id="date"> -->
+                                <label for="state"><b>State:</b></label>
+                                <input type="text" placeholder="Enter State" name="state" id="state">
 
                                 <label for="institution"><b>Institution:</b></label>
                                 <input type="text" placeholder="Enter Institution Name" name="institution"
