--- a/public/managePD.html
+++ b/public/managePD.html
@@ -76,12 +76,21 @@
 
                     <div class="column1">
                         <h3 class="self_proposal">Proposals</h3>
-                        <div class="selfProp_list">
-                            <!-- <a id="sp1" href="#" onclick="displayRequired(this);">link text1</a><br />
+
+                        <table id="selfProp_list">
+
+                            <th>Proposal</th>
+                            <th>Is Final</th>
+                            <th>Update</th>
+
+                        </table>
+
+                        <!-- <div class="selfProp_list"> -->
+                        <!-- <a id="sp1" href="#" onclick="displayRequired(this);">link text1</a><br />
                             <a id="sp2" href="#" onclick="displayRequired(this);">link text2</a><br />
                             <a id="sp3" href="#" onclick="displayRequired(this);">link text3</a><br />
                             <a id="sp4" href="#" onclick="displayRequired(this);">link text4</a><br /> -->
-                        </div>
+                        <!-- </div> -->
                     </div>
                     <div class="column2">
                         <h3 class="self_drafts">Drafts</h3>
@@ -94,6 +103,17 @@
                     </div>
                 </div>
 
+                <div class="container clearfix">
+
+                    <table id="final">
+
+                        <tr>
+                            <th>Final Proposals</th>
+                        </tr>
+
+                    </table>
+
+                </div>
                 <table id="adminPriced">
 
                     <tr>
@@ -113,7 +133,7 @@
 
                 <div class="row">
                     <h2 class="others_title">Drafts and Proposals Created by Others</h2>
-                    <div class="column1">
+                    <div class="column3">
                         <h3 class="others_proposal">Proposals</h3>
                         <div class="othersProp_list">
                             <!-- <a id="sp1" href="#" onclick="displayRequired(this);">link text1</a><br />
@@ -122,7 +142,7 @@
                             <a id="sp4" href="#" onclick="displayRequired(this);">link text4</a><br /> -->
                         </div>
                     </div>
-                    <div class="column2">
+                    <div class="column4">
                         <h3 class="others_drafts">Drafts</h3>
                         <div class="othersDraft_list">
                             <!-- <a id="sd1" href="#" onclick="displayRequired(this);">link text1</a><br />
