edit to finalizedProposals.html

--- a/public/finalizedProposals.html
+++ b/public/finalizedProposals.html
@@ -32,8 +32,8 @@
 
                     <tr>
                         <th>Proposal</th>
-                        <th>Download BOM</th>
-                        <th>Download Packing List</th>
+                        <th>BOM</th>
+                        <th>Packing List</th>
                     </tr>
 
                 </table>
