Added GOB, Delete Proposal/Draft

--- a/public/indexCalculator.html
+++ b/public/indexCalculator.html
@@ -698,9 +698,7 @@
 
                             </div>
 
-                            <!-- </div>
-                                activate this section if they need 3 columns
-                        <div class="column"> -->
+                            <!-- NEW SUBJECTS -->
 
                         </div>
                     </div>
@@ -1010,6 +1008,74 @@
                                 </div>
 
                             </div>
+
+                            <h2 <button class="collapsible"><span class='icon-up'></span> General, Organic, and
+                                Biochemistry
+
+                                </button></h2>
+
+                            <div class="content">
+
+                                <input name="ob" type="checkbox" id="ob-v1" value="ob-v1" onclick="kitVersion(this)">
+                                <label for="checkbox">Version 1</label><br>
+
+                                <h2 <button class="collapsible"><span class='icon-up'></span> Custom
+                                    </button></h2>
+
+                                <div class="content">
+                                    <input type="checkbox" name="ob" id="ob-1" value="ob-1"> Lab 1: Chemistry Lab
+                                    Safety<br>
+                                    <input type="checkbox" name="ob" id="ob-2" value="ob-2"> Lab 2: Introduction to
+                                    Science<br>
+                                    <input type="checkbox" name="ob" id="ob-3" value="ob-3"> Lab 3: Types of Matter<br>
+                                    <input type="checkbox" name="ob" id="ob-4" value="ob-4"> Lab 4: Physical and
+                                    chemical properties<br>
+                                    <input type="checkbox" name="ob" id="ob-5" value="ob-5"> Lab 5: Enthalpy and
+                                    Specific Heat<br>
+                                    <input type="checkbox" name="ob" id="ob-6" value="ob-6"> Lab 6: Molecular
+                                    Geometry<br>
+                                    <input type="checkbox" name="ob" id="ob-7" value="ob-7"> Lab 7: Chemical Bonds<br>
+                                    <input type="checkbox" name="ob" id="ob-8" value="ob-8"> Lab 8: Types of Chemical
+                                    Reactions<br>
+                                    <input type="checkbox" name="ob" id="ob-9" value="ob-9"> Lab 9: Molar Mass<br>
+                                    <input type="checkbox" name="ob" id="ob-10" value="ob-10"> Lab 10: Stoichiometry<br>
+                                    <input type="checkbox" name="ob" id="ob-11" value="ob-11"> Lab 11: The Ideal Gas
+                                    Law<br>
+                                    <input type="checkbox" name="ob" id="ob-12" value="ob-12"> Lab 12: Acids and
+                                    Bases<br>
+                                    <input type="checkbox" name="ob" id="ob-13" value="ob-13"> Lab 13: Reaction
+                                    Rates<br>
+                                    <input type="checkbox" name="ob" id="ob-14" value="ob-14"> Lab 14:
+                                    Chromatography<br>
+                                    <input type="checkbox" name="ob" id="ob-15" value="ob-15"> Lab 15: Diffusion &
+                                    Osmosis<br>
+                                    <input type="checkbox" name="ob" id="ob-16" value="ob-16"> Lab 16: Organic Chemical
+                                    Nomenclature<br>
+                                    <input type="checkbox" name="ob" id="ob-17" value="ob-17"> Lab 17: Hydrocarbons<br>
+                                    <input type="checkbox" name="ob" id="ob-18" value="ob-18"> Lab 18:
+                                    Stereochemistry<br>
+                                    <input type="checkbox" name="ob" id="ob-19" value="ob-19"> Lab 19: Esters and
+                                    Alcohols<br>
+                                    <input type="checkbox" name="ob" id="ob-20" value="ob-20"> Lab 20: Aspirin
+                                    Analysis<br>
+                                    <input type="checkbox" name="ob" id="ob-21" value="ob-21"> Lab 21:
+                                    Saponification<br>
+                                    <input type="checkbox" name="ob" id="ob-22" value="ob-22"> Lab 22: Antioxidant
+                                    Analysis<br>
+                                    <input type="checkbox" name="ob" id="ob-23" value="ob-23"> Lab 23: The Chemistry of
+                                    Life<br>
+                                    <input type="checkbox" name="ob" id="ob-24" value="ob-24"> Lab 24: Isoelectric Point
+                                    Titration<br>
+                                    <input type="checkbox" name="ob" id="ob-25" value="ob-25"> Lab 25: Protein
+                                    Isolation<br>
+                                    <input type="checkbox" name="ob" id="ob-26" value="ob-26"> Lab 26: Enzyme
+                                    Catalysis<br>
+                                </div>
+
+                            </div>
+
+                            <!-- NEW SUBJECTS -->
+
 
                         </div>
                     </div>
