--- a/public/managePD.html
+++ b/public/managePD.html
@@ -42,35 +42,6 @@
                         <i class="fa fa-calendar"></i>
                         <span></span> <i class="fa fa-caret-down"></i>
                     </div>
-                    <!-- <button type="button" onclick="update()" class="ckp">Update</button> -->
-
-                    <!-- <script type="text/javascript">
-                        $(function () {
-
-                            var start = moment().subtract(6, 'days');
-                            var end = moment();
-
-                            function cb(start, end) {
-                                $('#reportrange span').html(start.format('MMMM D, YYYY') + ' - ' + end.format('MMMM D, YYYY'));
-                            }
-
-                            $('#reportrange').daterangepicker({
-                                startDate: start,
-                                endDate: end,
-                                ranges: {
-                                    'Today': [moment(), moment()],
-                                    'Yesterday': [moment().subtract(1, 'days'), moment().subtract(1, 'days')],
-                                    'Last 7 Days': [moment().subtract(6, 'days'), moment()],
-                                    'Last 30 Days': [moment().subtract(29, 'days'), moment()],
-                                    'This Month': [moment().startOf('month'), moment().endOf('month')],
-                                    'Last Month': [moment().subtract(1, 'month').startOf('month'), moment().subtract(1, 'month').endOf('month')]
-                                }
-                            }, cb);
-
-                            cb(start, end);
-
-                        });
-                    </script> -->
 
                     <p>&nbsp;</p>
 
@@ -127,7 +98,7 @@
 
         </div>
 
-        <div class="container clearfix">
+        <!-- <div class="container clearfix">
 
             <div class="others_list">
 
@@ -136,25 +107,25 @@
                     <div class="column3">
                         <h3 class="others_proposal">Proposals</h3>
                         <div class="othersProp_list">
-                            <!-- <a id="sp1" href="#" onclick="displayRequired(this);">link text1</a><br />
+                            <a id="sp1" href="#" onclick="displayRequired(this);">link text1</a><br />
                             <a id="sp2" href="#" onclick="displayRequired(this);">link text2</a><br />
                             <a id="sp3" href="#" onclick="displayRequired(this);">link text3</a><br />
-                            <a id="sp4" href="#" onclick="displayRequired(this);">link text4</a><br /> -->
+                            <a id="sp4" href="#" onclick="displayRequired(this);">link text4</a><br />
                         </div>
                     </div>
                     <div class="column4">
                         <h3 class="others_drafts">Drafts</h3>
                         <div class="othersDraft_list">
-                            <!-- <a id="sd1" href="#" onclick="displayRequired(this);">link text1</a><br />
+                            <a id="sd1" href="#" onclick="displayRequired(this);">link text1</a><br />
                             <a id="sd2" href="#" onclick="displayRequired(this);">link text2</a><br />
                             <a id="sd3" href="#" onclick="displayRequired(this);">link text3</a><br />
-                            <a id="sd4" href="#" onclick="displayRequired(this);">link text4</a><br /> -->
+                            <a id="sd4" href="#" onclick="displayRequired(this);">link text4</a><br />
                         </div>
                     </div>
                 </div>
             </div>
 
-        </div>
+        </div> -->
 
     </div>
 
